text-overflow: ellipsis is broken by text-align: right and padding-left https://bugs.webkit.org/show_bug.cgi?id=121902

Reviewed by Zalan Bujtas.

Source/WebCore:

Right offsets (which include padding) are not the same as widths (which don't).

Test: fast/inline/padding-ellipsis-right.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::updateLogicalWidthForRightAlignedBlock):
(WebCore::RenderBlockFlow::checkLinesForTextOverflow):

LayoutTests:

Updating expected results.

* fast/inline/padding-ellipsis-right-expected.html: Added.
* fast/inline/padding-ellipsis-right.html: Added.
* platform/mac/fast/css/text-overflow-ellipsis-text-align-center-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-text-align-center-expected.txt:
* platform/mac/fast/css/text-overflow-ellipsis-text-align-left-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-text-align-left-expected.txt:
* platform/mac/fast/css/text-overflow-ellipsis-text-align-right-expected.png:
* platform/mac/fast/css/text-overflow-ellipsis-text-align-right-expected.txt:
* platform/mac/fast/css/vertical-text-overflow-ellipsis-text-align-center-expected.png:
* platform/mac/fast/css/vertical-text-overflow-ellipsis-text-align-center-expected.txt:
* platform/mac/fast/css/vertical-text-overflow-ellipsis-text-align-left-expected.png:
* platform/mac/fast/css/vertical-text-overflow-ellipsis-text-align-right-expected.png:
* platform/mac/fast/css/vertical-text-overflow-ellipsis-text-align-right-expected.txt:


Canonical link: https://commits.webkit.org/165373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187380 268f45cc-cd09-0410-ab3c-d52691b4dbfc